# fleet

./: .aiignore  .dockerignore  .gitignore  .tektonlintrc.yaml  .yamllint  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: build-image.yml  ci.yml
cluster-templates/aws-ha/base/: kustomization.yaml
clusters/: README.md
clusters/379b5094-ibmvirt/crossplane/: kustomization.yaml
clusters/test-cluster-01/: kustomization.yaml
docs/: architecture.md  developer-guide.md  vcluster.md
docs/plans/: development-constraints-plan.md  migration-plan.md
fleet/tasks/: _env.py  _log.py  apply_base_workloads.py  apply_cluster_crs.py  apply_crossplane_creds.py  apply_tier_workloads.py  cleanup_hub_artifacts.py  configure_spoke_oauth.py  configure_spoke_rbac.py  create_cluster_issuer.py  create_namespace.py  create_pull_secret.py  create_ssh_key.py  create_test_vcluster.py  delete_cluster_resources.py  delete_test_vcluster.py  extract_cert_material.py  extract_kubeconfig.py  label_post_provision.py  read_cluster_tier.py  register_keycloak_client.py  request_ssl_cert.py  run_post_provision.py  save_spoke_kubeconfig.py  seed_test_vcluster.py  teardown_test_vcluster.py  transform_aws_creds.py  trigger_post_provision.py  trigger_provision.py  validate_inputs.py  verify_deprovision.py  verify_tier_workloads.py  wait_for_aws_creds.py  wait_for_hive_ready.py  wait_for_managed_cluster.py  wait_for_ssl_ready.py  wait_hive_uninstall.py
hub-config/: README.md  generate-channels.sh  install-hub-config.sh  kustomization.yaml  namespaces.yaml  uninstall-hub-config.sh
hub-config/acm/: kustomization.yaml  multiclusterhub.yaml  subscription.yaml
hub-config/argocd/: subscription.yaml
hub-config/cert-manager/: subscription.yaml
hub-config/crossplane/: kustomization.yaml  provider.yaml
hub-config/tekton/: subscription.yaml
tekton/: configmap-defaults.yaml  kustomization.yaml  pod-template.yaml  workspace-pvc.yaml
tekton/pipelines/: deprovision.yaml  kustomization.yaml  post-provision.yaml  pre-provision.yaml  provision.yaml  test-vcluster.yaml
tekton/rbac/: clusterrole.yaml
tekton/tasks/: apply-cluster-crs.yaml  apply-crossplane-credentials.yaml  apply-tier-workloads.yaml  cleanup-hub-artifacts.yaml  configure-spoke-oauth.yaml  create-cluster-issuer.yaml  create-cluster-namespace.yaml  create-pull-secret.yaml  create-ssh-key.yaml  create-test-vcluster.yaml  delete-cluster-resources.yaml  delete-test-vcluster.yaml  extract-spoke-kubeconfig.yaml  kustomization.yaml  label-for-post-provision.yaml  register-keycloak-client.yaml  run-post-provision.yaml  seed-test-vcluster.yaml  teardown-test-vcluster.yaml  transform-aws-credentials.yaml  trigger-post-provision.yaml  trigger-provision.yaml  validate-cluster-inputs.yaml  verify-deprovision.yaml  verify-tier-workloads.yaml  wait-for-aws-credentials.yaml  wait-for-hive-ready.yaml  wait-for-managed-cluster.yaml  wait-hive-uninstall.yaml
tekton/triggers/: eventlistener.yaml  kustomization.yaml  triggerbinding-deprovision.yaml  triggerbinding-post-provision.yaml  triggerbinding-provision.yaml  triggertemplate-deprovision.yaml  triggertemplate-post-provision.yaml  triggertemplate-pre-provision.yaml  triggertemplate-provision.yaml
tests/data/: vcluster-values.yaml
tests/unit/: test_apply_base_workloads.py  test_apply_cluster_crs.py  test_apply_crossplane_creds.py  test_apply_tier_workloads.py  test_cleanup_hub_artifacts.py  test_configure_spoke_oauth.py  test_configure_spoke_rbac.py  test_create_cluster_issuer.py  test_create_namespace.py  test_create_pull_secret.py  test_create_ssh_key.py  test_create_test_vcluster.py  test_delete_cluster_resources.py  test_delete_test_vcluster.py  test_env.py  test_extract_cert_material.py  test_extract_kubeconfig.py  test_label_post_provision.py  test_read_cluster_tier.py  test_register_keycloak_client.py  test_request_ssl_cert.py  test_run_post_provision.py  test_save_spoke_kubeconfig.py  test_seed_test_vcluster.py  test_teardown_test_vcluster.py  test_transform_aws_creds.py  test_trigger_post_provision.py  test_trigger_provision.py  test_validate_inputs.py  test_verify_deprovision.py  test_verify_tier_workloads.py  test_wait_for_aws_creds.py  test_wait_for_hive_ready.py  test_wait_for_managed_cluster.py  test_wait_for_ssl_ready.py  test_wait_hive_uninstall.py
tests/validation/: test_kustomize_build.py
workloads/base/: kustomization.yaml  smoke-test.yaml
workloads/virt/: kustomization.yaml
(+57 files in other folders)
