[tool.poetry]
name = "fleet"
version = "0.1.0"
description = "CLI tools for fleet Tekton pipeline tasks"
packages = [{include = "fleet"}]

[tool.poetry.dependencies]
python = ">=3.11"
pyyaml = "^6.0"
kubernetes = "^29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
tox = "^4.0"
yamllint = "^1.35"
black = "^24.0"
mypy = "^1.0"
pylint = "^3.0"
bandit = "^1.7"

[tool.poetry.scripts]
# Entry points added as tasks are built, e.g.:
# fleet-validate-inputs = "fleet.tasks.validate_inputs:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
