[tool.poetry]
name = "fleet"
version = "0.1.0"
description = "CLI tools for fleet Tekton pipeline tasks"
packages = [{include = "fleet"}]

[tool.poetry.dependencies]
python = ">=3.11"
pyyaml = "^6.0"
kubernetes = "^29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
tox = "^4.0"
yamllint = "^1.35"
black = "^24.0"
mypy = "^1.0"
pylint = "^3.0"
bandit = "^1.7"

[tool.poetry.scripts]
fleet-create-namespace = "fleet.tasks.create_namespace:main"
fleet-apply-crossplane-creds = "fleet.tasks.apply_crossplane_creds:main"
fleet-wait-for-aws-creds = "fleet.tasks.wait_for_aws_creds:main"
fleet-validate-inputs = "fleet.tasks.validate_inputs:main"
fleet-apply-cluster-crs = "fleet.tasks.apply_cluster_crs:main"
fleet-wait-for-hive-ready = "fleet.tasks.wait_for_hive_ready:main"
fleet-wait-for-managed-cluster = "fleet.tasks.wait_for_managed_cluster:main"
fleet-extract-kubeconfig = "fleet.tasks.extract_kubeconfig:main"
fleet-label-post-provision = "fleet.tasks.label_post_provision:main"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "subprocess-run-check",
    "duplicate-code",
]

[tool.bandit]
skips = ["B404", "B603", "B607"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
