[tool.poetry]
name = "fleet"
version = "0.1.0"
description = "CLI tools for fleet Tekton pipeline tasks"
packages = [{include = "fleet"}]

[tool.poetry.dependencies]
python = ">=3.11"
pyyaml = "^6.0"
kubernetes = "^29.0"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
tox = "^4.0"
yamllint = "^1.35"
black = "^24.0"
mypy = "^1.0"
pylint = "^3.0"
bandit = "^1.7"

[tool.poetry.scripts]
fleet-create-namespace = "fleet.tasks.create_namespace:main"
fleet-create-pull-secret = "fleet.tasks.create_pull_secret:main"
fleet-create-ssh-key = "fleet.tasks.create_ssh_key:main"
fleet-apply-crossplane-creds = "fleet.tasks.apply_crossplane_creds:main"
fleet-wait-for-aws-creds = "fleet.tasks.wait_for_aws_creds:main"
fleet-transform-aws-creds = "fleet.tasks.transform_aws_creds:main"
fleet-validate-inputs = "fleet.tasks.validate_inputs:main"
fleet-apply-cluster-crs = "fleet.tasks.apply_cluster_crs:main"
fleet-wait-for-hive-ready = "fleet.tasks.wait_for_hive_ready:main"
fleet-wait-for-managed-cluster = "fleet.tasks.wait_for_managed_cluster:main"
fleet-extract-kubeconfig = "fleet.tasks.extract_kubeconfig:main"
fleet-label-post-provision = "fleet.tasks.label_post_provision:main"
fleet-delete-cluster-resources = "fleet.tasks.delete_cluster_resources:main"
fleet-wait-hive-uninstall = "fleet.tasks.wait_hive_uninstall:main"
fleet-cleanup-hub-artifacts = "fleet.tasks.cleanup_hub_artifacts:main"
fleet-verify-deprovision = "fleet.tasks.verify_deprovision:main"
fleet-save-spoke-kubeconfig = "fleet.tasks.save_spoke_kubeconfig:main"
fleet-register-keycloak-client = "fleet.tasks.register_keycloak_client:main"
fleet-configure-spoke-oauth = "fleet.tasks.configure_spoke_oauth:main"
fleet-request-ssl-cert = "fleet.tasks.request_ssl_cert:main"
fleet-wait-for-ssl-ready = "fleet.tasks.wait_for_ssl_ready:main"
fleet-extract-cert-material = "fleet.tasks.extract_cert_material:main"
fleet-apply-base-workloads = "fleet.tasks.apply_base_workloads:main"
fleet-configure-spoke-rbac = "fleet.tasks.configure_spoke_rbac:main"
fleet-read-cluster-tier = "fleet.tasks.read_cluster_tier:main"
fleet-trigger-post-provision = "fleet.tasks.trigger_post_provision:main"

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "subprocess-run-check",
    "duplicate-code",
]

[tool.bandit]
skips = ["B404", "B603", "B607"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
